--- a/index.html
+++ b/index.html
@@ -3,7 +3,30 @@
 <head>
 <title>Перша сторінка сайту</title>
 <meta charset="utf-8">
+  <link rel="stylesheet" href="style1.css">
+    
 </head>
 <body>
+  <div id="b1">
+     <div id="b2">
+       <h1>888888888888888888</h1>
+  </div>
+     <div id="b3">
+  
+  </div>
+     <div id="b4">
+  
+  </div>
+     <div id="b5">
+  
+  </div>
+     <div id="b6>
+  
+  </div>
+     <div id="b7>
+  
+  </div>
+  
+  </div>
 </body>
 </html>
